src/tests/ci/assignment_5_functions/valid/17_double_include.c
#include "math.h"
#include "math.h"
#include "math.h"

int main() {
    int x = 4;
    int y = add(2, 3);
    return x + y;
}