src/tests/ci/assignment_5_functions/invalid_semantic/03_function_arg_count.c
int add(int a, int b) {
    return a + b;
}

int main() {
    int x = add(5);
    return 0;
}